--- a/displaytag-doc/src/site/resources/nightly/.header.html
+++ b/displaytag-doc/src/site/resources/nightly/.header.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>Displaytag - Nightly builds </title>
+    <title>Displaytag snapshots</title>
       <style type="text/css" media="all">
-          @import url("../style/maven-base.css");
-			    @import url("../style/maven-theme.css");
-			    @import url("../style/project.css");
+            @import url("/11/css/maven-base.css");
+			@import url("/11/css/maven-theme.css");
+			@import url("/11/css/project.css");
 			</style>
 			<link rel="stylesheet" href="../style/print.css" type="text/css" media="print"></link>
 			<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
@@ -16,7 +16,7 @@
 	       <img alt="sourceforge" src="http://sourceforge.net/sflogo.php?group_id=73068&amp;type=2"/>
 	     </a>
 	     <a href="http://displaytag.sourceforge.net" id="projectLogo">
-	       <img alt="Display tag library" src="../images/displaytag.png"/>
+	       <img alt="Display tag library" src="/11/images/displaytag.png"/>
 	     </a>
 	     <div class="clear"><hr/></div>
 	   </div>
@@ -30,11 +30,11 @@
 
      <div class="contentBox">
        <div class="section">
-         <h2>Nightly builds</h2>
+         <h2>Development Snapshots</h2>
          <p>
-           Nightly builds on this page have been automatically generated and are not guaranteed to be stable.
+           Warning: Snapshots builds on this page have been automatically generated and are not guaranteed to be stable.
            It is possible that these builds have major bugs and may not run at all.
-           Be sure to check <a href="../junit-report.html">junit test results</a> to understand what is working and what is not
+           Be sure to check <a href="/11/displaytag/surefire-report.html">junit test results</a> to understand what is working and what is not
            in these drops.
          </p>
        </div>
