--- a/displaytag-doc/src/site/resources/nightly/.header.html
+++ b/displaytag-doc/src/site/resources/nightly/.header.html
@@ -5,17 +5,17 @@
       <style type="text/css" media="all">
             @import url("/11/css/maven-base.css");
 			@import url("/11/css/maven-theme.css");
-			@import url("/11/css/project.css");
+			@import url("/11/css/site.css");
 			</style>
 			<link rel="stylesheet" href="../style/print.css" type="text/css" media="print"></link>
 			<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
 	 </head>
 	 <body class="composite">
 	   <div id="banner">
-	     <a href="http://sourceforge.net" id="organizationLogo">
+	     <a href="http://sourceforge.net" id="bannerLeft">
 	       <img alt="sourceforge" src="http://sourceforge.net/sflogo.php?group_id=73068&amp;type=2"/>
 	     </a>
-	     <a href="http://displaytag.sourceforge.net" id="projectLogo">
+	     <a href="http://displaytag.sourceforge.net" id="bannerRight">
 	       <img alt="Display tag library" src="/11/images/displaytag.png"/>
 	     </a>
 	     <div class="clear"><hr/></div>
